`system` operator